--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Homedecor</title>
   </head>
   <body>
     <div id="root" class="containerRoot"></div>
